--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,308 @@
+absl-py==1.4.0
+aiohttp==3.8.4
+aiosignal==1.3.1
+altair==5.0.1
+anyio==3.6.2
+appdirs==1.4.4
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.0.8
+astunparse==1.6.3
+async-generator==1.10
+async-timeout==4.0.2
+attrdict==2.0.1
+attrs==22.1.0
+Authlib==1.3.0
+autopep8==2.0.1
+Babel==2.12.1
+backcall==0.2.0
+bce-python-sdk==0.8.83
+bcrypt==4.0.1
+beautifulsoup4==4.11.1
+bleach==5.0.1
+blinker==1.6.2
+Brotli==1.0.9
+bs4==0.0.1
+cachetools==5.2.0
+cattrs==22.1.0
+certifi==2022.6.15
+cffi==1.15.1
+chardet==3.0.4
+charset-normalizer==2.1.0
+click==8.1.3
+colorama==0.4.5
+Columnar==1.4.1
+comtypes==1.1.13
+contourpy==1.0.7
+cryptography==41.0.1
+cssselect==1.2.0
+cssutils==2.6.0
+cycler==0.11.0
+Cython==0.29.35
+debugpy==1.6.3
+decorator==5.1.1
+defusedxml==0.7.1
+distro==1.8.0
+dnspython==2.2.1
+entrypoints==0.4
+et-xmlfile==1.1.0
+exceptiongroup==1.0.0rc9
+executing==1.1.1
+fastapi==0.95.2
+fastjsonschema==2.16.2
+ffmpy==0.3.0
+fire==0.5.0
 Flask==2.2.2
+flask-babel==3.1.0
+flatbuffers==23.5.26
+fonttools==4.39.4
+frozenlist==1.3.3
+fsspec==2023.5.0
+future==0.18.2
+futures==2.2.0
+gast==0.4.0
+geocoder==1.38.1
+geographiclib==1.52
+geopy==2.2.0
+gevent==22.10.2
+geventhttpclient==2.0.2
+gitdb==4.0.10
+GitPython==3.1.31
+google==3.0.0
+google-api-core==2.10.1
+google-api-python-client==2.65.0
+google-auth==2.11.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.5.3
+google-cloud==0.34.0
+google-cloud-vision==3.1.2
+google-pasta==0.2.0
+googleapis-common-protos==1.56.4
+googletrans==3.1.0a0
+goslate==1.5.4
+gradio==3.11.0
+greenlet==2.0.2
+grpcio==1.49.0
+grpcio-status==1.49.0
+gTTS==2.2.4
+h11==0.12.0
+h2==3.2.0
+h5py==3.8.0
+hpack==3.0.0
+hstspreload==2022.9.1
+httpcore==0.15.0
+httplib2==0.20.4
+httpx==0.24.1
+hyperframe==5.2.0
+icrawler==0.6.6
+idna==2.10
+imageio==2.30.0
+imgaug==0.4.0
+importlib-metadata==6.6.0
+imutils==0.5.4
+ipykernel==6.16.2
+ipython==8.5.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.6
+itsdangerous==2.1.2
+jaraco.context==4.1.2
+jax==0.4.11
+jedi==0.18.1
+Jinja2==3.1.2
+jsonschema==4.16.0
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-server==1.21.0
+jupyter_client==7.4.4
+jupyter_core==5.3.0
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.7
+keras==2.12.0
+keyboard==0.13.5
+kiwisolver==1.4.4
+lazy_loader==0.2
+libclang==16.0.0
+linkify-it-py==2.0.2
+lmdb==1.4.1
+lxml==4.9.1
+Markdown==3.4.3
+markdown-it-py==2.2.0
+MarkupSafe==2.1.1
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+mdit-py-plugins==0.3.5
+mdurl==0.1.2
+mistune==2.0.4
+ml-dtypes==0.1.0
+more-itertools==9.0.0
+MouseInfo==0.1.3
+mpmath==1.3.0
+multidict==6.0.4
+nbclassic==0.4.5
+nbclient==0.7.0
+nbconvert==7.2.3
+nbformat==5.7.0
+neat==0.4.1
+neat-python==0.92
+nest-asyncio==1.5.6
+networkx==3.1
+notebook==6.5.1
+notebook_shim==0.2.0
+numpy==1.23.4
+oauthlib==3.2.2
+onnx==1.14.0
+opencv-contrib-python==4.6.0.66
+opencv-python==4.6.0.66
+openpyxl==3.1.2
+opt-einsum==3.3.0
+orjson==3.9.0
+outcome==1.2.0
+packaging==21.3
+paddle2onnx==1.0.6
+paddleocr==2.6.1.3
+pandas==1.5.1
+pandocfilters==1.5.0
+paramiko==3.2.0
+parso==0.8.3
+pdf2docx==0.5.6
+pickleshare==0.7.5
+Pillow==9.2.0
+platformdirs==3.5.1
+playsound==1.3.0
+premailer==3.10.0
+prometheus-client==0.15.0
+prompt-toolkit==3.0.31
+proto-plus==1.22.1
+protobuf==3.20.3
+psutil==5.9.2
+pure-eval==0.2.2
+Py-Dictionary==4.1.4
+pyarrow==12.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAudio==0.2.12
+PyAutoGUI==0.9.53
+pyclipper==1.3.0.post4
+pycodestyle==2.10.0
+pycparser==2.21
+pycryptodome==3.18.0
+pydantic==1.10.8
+pydeck==0.8.1b0
+PyDictionary==2.0.1
+pydub==0.25.1
+pygame==2.1.2
+PyGetWindow==0.0.9
+Pygments==2.13.0
+pyjokes==0.6.0
+pymongo==4.3.2
+Pympler==1.0.1
+PyMsgBox==1.0.9
+PyMuPDF==1.20.2
+PyNaCl==1.5.0
+pyparsing==3.0.9
+PyPDF2==2.10.8
+pyperclip==1.8.2
+pypiwin32==223
+PyQt5==5.15.7
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.11.0
+PyRect==0.2.0
+pyrsistent==0.18.1
+PyScreeze==0.1.28
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-docx==0.8.11
+python-multipart==0.0.6
+python-rapidjson==1.10
+pyttsx3==2.90
+pytweening==1.0.4
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
+PyWavelets==1.4.1
+pywhatkit==5.4
+pywikihow==0.5.7
+pywin32==304
+pywinpty==2.0.9
+PyYAML==6.0
+pyzmq==24.0.1
+qtconsole==5.4.3
+QtPy==2.3.1
+rapidfuzz==3.0.0
+rarfile==4.0
+ratelim==0.1.6
+requests==2.31.0
+requests-cache==0.9.6
+requests-oauthlib==1.3.1
+rfc3986==1.5.0
+rich==13.4.1
+rsa==4.9
+scikit-build==0.17.6
+scikit-image==0.21.0
+scipy==1.10.1
+secure-smtplib==0.1.1
+selenium==4.5.0
+Send2Trash==1.8.0
+shapely==2.0.1
+six==1.16.0
+smmap==5.0.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+SpeechRecognition==3.8.1
+speedtest-cli==2.1.4b1
+stack-data==0.5.1
+starlette==0.27.0
+streamlit==1.23.1
+string-color==1.2.3
+sympy==1.12
+tenacity==8.2.2
+tensorboard==2.12.3
+tensorboard-data-server==0.7.0
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-intel==2.12.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.3.0
+terminado==0.17.0
+tifffile==2023.4.12
+tinycss2==1.2.1
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.0
+torch==1.11.0
+tornado==6.2
+tqdm==4.65.0
+traitlets==5.5.0
+trio==0.22.0
+trio-websocket==0.9.2
+tritonclient==2.34.0
+typing_extensions==4.6.3
+tzdata==2023.3
+tzlocal==4.3
+uc-micro-py==1.0.2
+uritemplate==4.1.1
+url-normalize==1.4.3
+urllib3==1.26.11
+uvicorn==0.22.0
+validators==0.22.0
+vboxapi==1.0
+visualdl==2.5.2
+watchdog==3.0.0
+wcwidth==0.2.5
 weaviate-client==3.26.2
+webencodings==0.5.1
+WebOb==1.8.7
+websocket-client==1.4.1
+websockets==11.0.3
+Werkzeug==2.2.2
+widgetsnbextension==4.0.7
+wikipedia==1.4.0
+wolframalpha==5.0.0
+wrapt==1.14.1
+wsproto==1.2.0
+x2paddle==1.4.1
+xmltodict==0.13.0
+yarl==1.9.2
+zipp==3.15.0
+zope.event==4.6
+zope.interface==6.0
